zealot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zealot
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zealot
  template:
    metadata:
      labels:
        app: zealot
    spec:
      containers:
        - name: zealot
          image: ghcr.io/tryzealot/zealot:nightly-2026-05-14@sha256:764ae2cfc520036adb827116bd6506e198ae53ab3d1e29e19deb2213d29a22bb
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: uploads
              mountPath: /app/public/uploads
            - name: backup
              mountPath: /app/public/backup
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 180
            periodSeconds: 20
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 768Mi
            limits:
              cpu: 1000m
              memory: 2Gi
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: zealot-uploads
        - name: backup
          persistentVolumeClaim:
            claimName: zealot-backup
