zealot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zealot
spec:
  selector:
    app: zealot
  ports:
    - name: http
      port: 80
      targetPort: http
