zealot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zealot
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - zealot.lowjungxuan.dpdns.org
      secretName: zealot-tls
  rules:
    - host: zealot.lowjungxuan.dpdns.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: zealot
                port:
                  number: 80
